# aweswitch

./: .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  README_cn.md  aweswitch.py  default-config.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CHANGELOG.md  CONTRIBUTING.md
src/aweswitch/: __init__.py  cli.py
tests/: test_aweswitch.py
