[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aweswitch"
version = "0.1.0"
description = "A tiny local launcher for switching AI agent runtime profiles."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Peng" }
]
license = "MPL-2.0"
keywords = ["ai", "agent", "claude", "cli", "profile"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities"
]

[project.scripts]
aweswitch = "aweswitch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aweswitch = ["default-config.json"]
